power 섹션 기본 구성

--- a/index.html
+++ b/index.html
@@ -135,5 +135,26 @@
     </div>
   </section>
 
+  <!-- POWER -->
+  <section class="power">
+    <div class="inner">
+
+      <div class="multiple-apps">
+        <h1 class="bgtext">거침없는 일 처리 성능</h1>
+        <div class="figures">
+          <figure>
+            <img src="./images/power_multiple_apps.png" alt="Keynote 마크업과 메시지가 함께 표시된 Split View" />
+            <figcaption class="bgtext">동시에 여러 앱 사용 가능</figcaption>
+          </figure>
+        </div>
+      </div>
+
+      <div class="arcade"></div>
+
+      <div class="create"></div>
+
+    </div>
+  </section>
+
 </body>
 </html>
