power 섹션 기본 구성

--- a/index.html
+++ b/index.html
@@ -149,9 +149,23 @@
         </div>
       </div>
 
-      <div class="arcade"></div>
+      <div class="arcade">
+        <div class="figures">
+          <figure>
+            <img src="./images/power_arcade.png" alt="iPad에 Wonderbox 앱이 열려 있는 모습">
+            <figcaption class="bgtext">신나게 즐기는 새로운 APPLE ACADE 게임</figcaption>
+          </figure>
+        </div>
+      </div>
 
-      <div class="create"></div>
+      <div class="create">
+        <div class="figures">
+          <figure>
+            <img src="./images/power_create.jpg" alt="Procreate에서 Apple Pencil로 그림이 그려져 있는 모습">
+            <figcaption class="bgtext">스케치하고, 그리고, 색칠하고</figcaption>
+          </figure>
+        </div>
+      </div>
 
     </div>
   </section>
