--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&family=Roboto:ital,wght@400;500;700&display=swap" rel="stylesheet" />
 
   <link rel="stylesheet" href="./css/main.css" />
-  <script defer src="./js/main.js"></script>
+  <script defer type="module" src="./js/main.js"></script>
 </head>
 <body>
   
@@ -594,6 +594,24 @@
           기기의 가치를 최대한 활용하는 것, 당신은 물론 지구에게도 좋은 일이죠.
         </p>
         <a href="javascript:void(0)" class="link">보상 판매 가격 알아보기</a>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- COMPARE -->
+  <section class="compare">
+    <div class="whitebox">
+      <div class="inner">
+
+        <h1>당신에게 맞는 iPad는?</h1>
+        <div class="items">
+          <!-- JS -->
+        </div>
+        <div class="links">
+          <a href="javascript:void(0)" class="link">모든 iPad 모델 비교하기</a>
+          <a href="javascript:void(0)" class="link">iPad 쇼핑하기</a>
+        </div>
 
       </div>
     </div>
