--- a/index.html
+++ b/index.html
@@ -694,6 +694,10 @@
         <a href="javascript:void(0)">iPad 10.2</a>
       </div>
 
+      <div class="navigations">
+        <!-- JS -->
+      </div>
+
     </div>
   </footer>
 
